@@ -839,8 +839,12 @@ device such as
 .TP
 .B \-w, \-\-where, \-\-location
 Don't actually display the manual pages, but do print the location(s) of
-the files that would be formatted or displayed.
-If the file is a cat file, also show the location of its source nroff file.
+the source nroff files that would be formatted.
+.TP
+.B \-W, \-\-where\-cat, \-\-location\-cat
+Don't actually display the manual pages, but do print the location(s) of
+the cat files that would be displayed.
+If \-w and \-W are both specified, print both separated by a space.
 .TP
 .B \-V, \-\-version
 Display version information.
