@@ -26,6 +26,11 @@ Major changes since man-db-2.4.0:
 
 	o Proofread the manual.
 
+	o The -w flag to man has been changed to display the name of only
+	  the source nroff file. A -W flag has been introduced which
+	  displays the name of the cat file as well. If both flags are given
+	  to man, it will behave as before.
+
 man-db 2.4.0 (26 June 2002)
 ===========================
 
